Add segments/set-edit-time endpoint.
