# lib/Controller/AbstractControllers/controller.php
@@ -32,6 +32,7 @@ abstract class controller implements IController {
 
             'segments' => 'getSegmentsController',
             'segments/set-active' => 'setCurrentSegmentController',
+            'segments/set-edit-time' => 'setEditingTimeController',
 
             'mt/matches' => 'getMtMatchesController',
 
