# lib/Controller/setEditingTimeController.php
@@ -3,27 +3,28 @@
 use AuthCookie;
 class setEditingTimeController extends ajaxController {
 
-    private $id;
+    private $projectId;
     private $editingTime;
+    private $jobId;
 
     public function __construct()
     {
         $filterArgs = [
-            'id'          => [ 'filter' => FILTER_SANITIZE_STRING ],
+            'projectId'          => [ 'filter' => FILTER_SANITIZE_STRING ],
             'editingTime'          => [ 'filter' => FILTER_VALIDATE_INT ],
         ];
         $__postInput = filter_input_array( INPUT_POST, $filterArgs );
-        $this->id = $__postInput['id'];
+
+        $this->projectId = $__postInput['projectId'];
         $this->editingTime = $__postInput['editingTime'];
+
+        $this->jobId = $this->getJobIdFromProjectId($this->projectId);
     }
 
     public function doAction() {
-        $user = AuthCookie::getCredentials();
         $JobsDao = new Jobs_JobDao();
-        $JobsDao->saveEditingTime($this->id, $this->editingTime);
+        $JobsDao->saveEditingTime($this->jobId, $this->editingTime);
 
-        echo json_encode("OK");
+        $this->result = ['status' => 'ok'];
     }
-
-    public function finalize() {}
 }
